--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Larissa Souza | Arquitetura</title>
+		<title>Larissa Souza | Arquitetura e Interiores</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -20,7 +20,7 @@
 				<!-- Header -->
 					<header id="header">
 						<h1>Larissa Souza</h1>
-						<p>Arquitetura e Design de Interiores</p>
+						<p>Arquitetura e Interiores</p>
 						<ul class="icons">
 							<li><a href="https://www.linkedin.com/in/larissa-souza-899949109/" target="_blank" class="icon brands fa-linkedin"><span class="label">Linkedin</span></a></li>
 							<li><a href="mailto:larissa.silva.souza@hotmail.com" class="icon fa-envelope"><span class="label">Email</span></a></li>
@@ -30,71 +30,77 @@
 				<!-- Thumbnail -->
 					<section id="thumbnails">
 						<article>
-							<a class="thumbnail" href="images/fulls/01.jpg" data-position="left center"><img src="images/thumbs/01.jpg" alt="" /></a>
-							<h2>Diam tempus accumsan</h2>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+							<a class="thumbnail" href="images/01.jpg" data-position="left center"><img src="images/01.jpg" alt="" /></a>
 						</article>
 						<article>
-							<a class="thumbnail" href="images/fulls/02.jpg"><img src="images/thumbs/02.jpg" alt="" /></a>
-							<h2>Vivamus convallis libero</h2>
-							<p>Sed velit lacus, laoreet at venenatis convallis in lorem tincidunt.</p>
+							<a class="thumbnail" href="images/02.jpg"><img src="images/02.jpg" alt="" /></a>
 						</article>
 						<article>
-							<a class="thumbnail" href="images/fulls/03.jpg" data-position="top center"><img src="images/thumbs/03.jpg" alt="" /></a>
-							<h2>Nec accumsan enim felis</h2>
-							<p>Maecenas eleifend tellus ut turpis eleifend, vitae pretium faucibus.</p>
+							<a class="thumbnail" href="images/03.jpg" data-position="top center"><img src="images/03.jpg" alt="" /></a>
 						</article>
 						<article>
-							<a class="thumbnail" href="images/fulls/04.jpg"><img src="images/thumbs/04.jpg" alt="" /></a>
-							<h2>Donec maximus nisi eget</h2>
-							<p>Tristique in nulla vel congue. Sed sociis natoque parturient nascetur.</p>
+							<a class="thumbnail" href="images/04.jpg"><img src="images/04.jpg" alt="" /></a>
 						</article>
 						<article>
-							<a class="thumbnail" href="images/fulls/05.jpg" data-position="top center"><img src="images/thumbs/05.jpg" alt="" /></a>
-							<h2>Nullam vitae nunc vulputate</h2>
-							<p>In pellentesque cursus velit id posuere. Donec vehicula nulla.</p>
+							<a class="thumbnail" href="images/05.jpg" data-position="top center"><img src="images/05.jpg" alt="" /></a>
 						</article>
 						<article>
-							<a class="thumbnail" href="images/fulls/06.jpg"><img src="images/thumbs/06.jpg" alt="" /></a>
-							<h2>Phasellus magna faucibus</h2>
-							<p>Nulla dignissim libero maximus tellus varius dictum ut posuere magna.</p>
+							<a class="thumbnail" href="images/06.jpg"><img src="images/06.jpg" alt="" /></a>
 						</article>
 						<article>
-							<a class="thumbnail" href="images/fulls/07.jpg"><img src="images/thumbs/07.jpg" alt="" /></a>
-							<h2>Proin quis mauris</h2>
-							<p>Etiam ultricies, lorem quis efficitur porttitor, facilisis ante orci urna.</p>
+							<a class="thumbnail" href="images/07.jpg"><img src="images/07.jpg" alt="" /></a>
 						</article>
 						<article>
-							<a class="thumbnail" href="images/fulls/08.jpg"><img src="images/thumbs/08.jpg" alt="" /></a>
-							<h2>Gravida quis varius enim</h2>
-							<p>Nunc egestas congue lorem. Nullam dictum placerat ex sapien tortor mattis.</p>
+							<a class="thumbnail" href="images/08.jpg"><img src="images/08.jpg" alt="" /></a>
 						</article>
 						<article>
-							<a class="thumbnail" href="images/fulls/09.jpg"><img src="images/thumbs/09.jpg" alt="" /></a>
-							<h2>Morbi eget vitae adipiscing</h2>
-							<p>In quis vulputate dui. Maecenas metus elit, dictum praesent lacinia lacus.</p>
+							<a class="thumbnail" href="images/09.jpg"><img src="images/09.jpg" alt="" /></a>
 						</article>
 						<article>
-							<a class="thumbnail" href="images/fulls/10.jpg"><img src="images/thumbs/10.jpg" alt="" /></a>
-							<h2>Habitant tristique senectus</h2>
-							<p>Vestibulum ante ipsum primis in faucibus orci luctus ac tincidunt dolor.</p>
+							<a class="thumbnail" href="images/10.jpg"><img src="images/10.jpg" alt="" /></a>
 						</article>
 						<article>
-							<a class="thumbnail" href="images/fulls/11.jpg"><img src="images/thumbs/11.jpg" alt="" /></a>
-							<h2>Pharetra ex non faucibus</h2>
-							<p>Ut sed magna euismod leo laoreet congue. Fusce congue enim ultricies.</p>
+							<a class="thumbnail" href="images/11.jpg"><img src="images/11.jpg" alt="" /></a>
 						</article>
 						<article>
-							<a class="thumbnail" href="images/fulls/12.jpg"><img src="images/thumbs/12.jpg" alt="" /></a>
-							<h2>Mattis lorem sodales</h2>
-							<p>Feugiat auctor leo massa, nec vestibulum nisl erat faucibus, rutrum nulla.</p>
+							<a class="thumbnail" href="images/12.jpg"><img src="images/12.jpg" alt="" /></a>
+						</article>
+						<article>
+							<a class="thumbnail" href="images/13.jpg"><img src="images/13.jpg" alt="" /></a>
+						</article>
+						<article>
+							<a class="thumbnail" href="images/14.jpg"><img src="images/14.jpg" alt="" /></a>
+						</article>
+						<article>
+							<a class="thumbnail" href="images/15.jpg"><img src="images/15.jpg" alt="" /></a>
+						</article>
+						<article>
+							<a class="thumbnail" href="images/16.jpg"><img src="images/16.jpg" alt="" /></a>
+						</article>
+						<article>
+							<a class="thumbnail" href="images/17.jpg"><img src="images/17.jpg" alt="" /></a>
+						</article>
+						<article>
+							<a class="thumbnail" href="images/18.jpg"><img src="images/18.jpg" alt="" /></a>
+						</article>
+						<article>
+							<a class="thumbnail" href="images/19.jpg"><img src="images/19.jpg" alt="" /></a>
+						</article>
+						<article>
+							<a class="thumbnail" href="images/20.jpg"><img src="images/20.jpg" alt="" /></a>
+						</article>
+						<article>
+							<a class="thumbnail" href="images/21.jpg"><img src="images/21.jpg" alt="" /></a>
+						</article>
+						<article>
+							<a class="thumbnail" href="images/22.jpg"><img src="images/22.jpg" alt="" /></a>
 						</article>
 					</section>
 
 				<!-- Footer -->
 					<footer id="footer">
 						<ul class="copyright">
-							<li>&copy; Untitled.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a>.</li>
+							<li>&copy; 2020.</li><li>Larissa Souza Arquitetura e Interiores</a>.</li>
 						</ul>
 					</footer>
 
