--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 		<title>Larissa Souza | Arquitetura e Interiores</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<link rel="icon" type="image/png" href="images/favicon.png">
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
@@ -22,6 +23,7 @@
 						<h1>Larissa Souza</h1>
 						<p>Arquitetura e Interiores</p>
 						<ul class="icons">
+							<li><a href="https://www.behance.net/larrisaolh77a4" target="_blank" class="icon brands fa-behance"><span class="label">Behance</span></a></li>
 							<li><a href="https://www.linkedin.com/in/larissa-souza-899949109/" target="_blank" class="icon brands fa-linkedin"><span class="label">Linkedin</span></a></li>
 							<li><a href="mailto:larissa.silva.souza@hotmail.com" class="icon fa-envelope"><span class="label">Email</span></a></li>
 						</ul>
